<resources>
    <string name="app_name">Cookeasy</string>
    <string name="home">Inicio</string>
    <string name="search_hint">Buscar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="explore_categories">Explorar categorías</string>
    <string name="new_recipes">Nuevas recetas</string>
    <string name="recommended_recipes">Para ti</string>
    <string name="favourite">Favoritos</string>
    <string name="description">Descripción</string>
    <string name="details">Detalles</string>
    <string name="ingredients">Ingredientes</string>
    <string name="preparation">Indicaciones</string>
    <string name="search_results">Resultados de búsqueda</string>
</resources>