<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Fragments.HomeFragment"
    android:orientation="vertical"
    android:layout_marginTop="30dp"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/margin">

        <androidx.appcompat.widget.SearchView
            android:layout_width="0dp"
            android:layout_height="@dimen/searchview_height"
            android:background="@drawable/searchview_background"
            android:layout_weight="3"
            app:queryHint="@string/search_hint" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:textSize="@dimen/title"
            android:textAlignment="center"
            android:layout_weight="2"
            android:gravity="center_vertical|center_horizontal" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="0dp"
            android:layout_height="@dimen/icon_button_size"
            android:src="@drawable/heart"
            android:layout_weight="1"
            />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title"
        android:layout_marginBottom="@dimen/margin"
        android:text="@string/explore_categories" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_Category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:text="@string/new_recipes" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_New_Recipes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</androidx.appcompat.widget.LinearLayoutCompat>