<FrameLayout
    android:id="@+id/fl_recipe"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="Fragments.RecipeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_recipe_image"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:cardCornerRadius="20dp"
                android:layout_margin="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_recipe_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/logo"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_recipe"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="right|bottom"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/ic_baseline_favorite_border_24" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_recipe_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="25dp"
                android:layout_margin="5dp"
                app:layout_constraintTop_toBottomOf="@id/cv_recipe_image"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="15dp">

                    <TextView
                        android:id="@+id/tv_recipe_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="30sp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:text="Receta"
                        />

                    <TextView
                        android:id="@+id/tv_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="20sp"
                        android:justificationMode="inter_word"
                        app:layout_constraintTop_toBottomOf="@id/tv_recipe_name"
                        app:layout_constraintStart_toStartOf="parent"
                        android:text="@string/description"
                        />

                    <TextView
                        android:id="@+id/tv_recipe_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="15sp"
                        app:layout_constraintTop_toBottomOf="@id/tv_description"
                        app:layout_constraintStart_toStartOf="parent"
                        android:text="Descripción de la receta"
                        />

                    <TextView
                        android:id="@+id/tv_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="20sp"
                        app:layout_constraintTop_toBottomOf="@id/tv_recipe_description"
                        app:layout_constraintStart_toStartOf="parent"
                        android:text="@string/details"
                        />

                    <LinearLayout
                        android:id="@+id/ly_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toBottomOf="@id/tv_details"
                        app:layout_constraintStart_toStartOf="parent">

                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="115dp"
                            android:layout_margin="5dp"
                            app:cardCornerRadius="25dp"
                            android:layout_weight="1">

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <ImageView
                                    android:id="@+id/iv1"
                                    android:layout_width="match_parent"
                                    android:layout_height="85dp"
                                    android:padding="10dp"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent"
                                    tools:src="@drawable/logo"/>

                                <TextView
                                    android:id="@+id/tv_time"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textSize="14sp"
                                    android:singleLine="true"
                                    android:paddingLeft="3dp"
                                    android:paddingRight="3dp"
                                    android:text="0 min"
                                    android:gravity="center_horizontal"
                                    app:layout_constraintTop_toBottomOf="@id/iv1"/>

                            </androidx.constraintlayout.widget.ConstraintLayout>

                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="115dp"
                            android:layout_margin="5dp"
                            app:cardCornerRadius="25dp"
                            android:layout_weight="1">

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <ImageView
                                    android:id="@+id/iv2"
                                    android:layout_width="match_parent"
                                    android:layout_height="85dp"
                                    android:padding="10dp"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent"
                                    tools:src="@drawable/logo"/>

                                <TextView
                                    android:id="@+id/tv_servings"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textSize="14sp"
                                    android:singleLine="true"
                                    android:paddingLeft="3dp"
                                    android:paddingRight="3dp"
                                    android:text="0 porciones"
                                    android:gravity="center_horizontal"
                                    app:layout_constraintTop_toBottomOf="@id/iv2"/>

                            </androidx.constraintlayout.widget.ConstraintLayout>

                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="115dp"
                            android:layout_margin="5dp"
                            app:cardCornerRadius="25dp"
                            android:layout_weight="1">

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <ImageView
                                    android:id="@+id/iv3"
                                    android:layout_width="match_parent"
                                    android:layout_height="85dp"
                                    android:padding="10dp"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent"
                                    tools:src="@drawable/logo"/>

                                <TextView
                                    android:id="@+id/tv_ingredients"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textSize="14sp"
                                    android:singleLine="true"
                                    android:paddingLeft="3dp"
                                    android:paddingRight="3dp"
                                    android:text="0 ingredientes"
                                    android:gravity="center_horizontal"
                                    app:layout_constraintTop_toBottomOf="@id/iv3"/>

                            </androidx.constraintlayout.widget.ConstraintLayout>

                        </androidx.cardview.widget.CardView>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_recipe_ingredient"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="20sp"
                        app:layout_constraintTop_toBottomOf="@id/ly_details"
                        app:layout_constraintStart_toStartOf="parent"
                        android:text="@string/ingredients" />


                    <ListView
                        android:id="@+id/lv_ingredients"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:scrollbars="none"
                        app:layout_constraintTop_toBottomOf="@id/tv_recipe_ingredient"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/tv_recipe_preparation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="20sp"
                        app:layout_constraintTop_toBottomOf="@id/lv_ingredients"
                        app:layout_constraintStart_toStartOf="parent"
                        android:text="@string/preparation" />

                    <TextView
                        android:id="@+id/tv_recipe_steps"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="15sp"
                        android:justificationMode="inter_word"
                        app:layout_constraintTop_toBottomOf="@id/tv_recipe_preparation"
                        app:layout_constraintStart_toStartOf="parent"
                        android:text="@string/ingredients" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>



</FrameLayout>